2005-02-15  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffe/main.c
	(main2): If an exception happens, exit with a non-null value.

2005-02-15  Jim Huang  <jserv@kaffe.org>

	* include/jawt.h,
	include/jawt_md.h,
	libraries/clib/awt/classpath-gtk/gtk-peer/gtk_jawt.c,
	libraries/clib/awt/classpath-gtk/gtk-peer/jawt.c,
	libraries/clib/classpath/classpath_jawt.h:
	New files.
	Merge GCJ's AWT Native Interface implementation, which
	was brought by Thomas Fitzsimmons <fitzsim@redhat.com>.

	* include/Makefile.am,
	libraries/clib/awt/classpath-gtk/gtk-peer/Makefile.am:
	Add jawt headers and implementation.

	* include/Makefile.in,
	libraries/clib/awt/classpath-gtk/gtk-peer/Makefile.in:
	Regenerated.

2005-02-14  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-14  Sven de Marothy  <sven@physto.se>

        * javax/swing/SpinnerDateModel.java: Implemented.

2005-02-14  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-14  Sven de Marothy  <sven@physto.se>

        * java/util/Calendar.java 
        (Calendar): Constructor should clear fields.

	2005-02-14  Sven de Marothy  <sven@physto.se>

        * java/util/Calendar.java 
        (clear): Dates should clear to local time.

        * java/util/GregorianCalendar.java      
        (computeTime): Fix priority problem with DAY_OF_WEEK,
        Handle non-sunday-startig weeks and minimumDaysInFirstWeek.

2005-02-14  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-13  Mark Wielaard  <mark@klomp.org>

	* java/awt/AWTKeyStroke.java (getAWTKeyStroke(String)): Throw
	IllegalArgumentException when the given String is null.

	* javax/swing/KeyStroke.java (getKeyStroke(String)): Return null
	when given keystoke sequence cannot be parsed.

	* javax/swing/JRootPane.java (setJMenuBar): Remove current menubar
	if one is installed. Only install the given menubar is not null.

	* javax/swing/JViewport.java (getViewSize): Return an empty